- fixed bugs in SCIPnlpiOracleChgLinearCoefs and SCIPnlpiOracleChgQuadCoefs for the case where new coefficients where added
- fixed bug in nlp.c: nlrowSearchQuadElem was using SCIPquadelemSortedFind incorrectly
- fixed bugs in cons_bounddisjunction where the branching during the constraint enforcement was done incorrectly

parameters:
- added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
- added possible value 'e' for <constraints/soc/nlpform> to enable convex exponential-sqrt form for SOC constraint representation in NLP
- added parameter <constraints/indicator/removeIndicators> to remove indicator constraints if corresponding vub has been added
- change default value of parameter "nodeselection/restartdfs/selectbestfreq" 100
- added parameter "nodeselection/restartdfs/countonlyleafs" in node selector restart dfs which can be used to select 
  the counting process of processed nodes 
- added parameter <misc/resetstat> which state if the statistics should be reseted if the transformed problem is freed 
  (in case of a benders decomposition this parameter should be set to FALSE) default value is TRUE
- added parameter <misc/improvingsols> which state if only solution which have a better (or equal) primal bound 
  as the best know one are checked  is TRUE; this is of interest if the check of a solution is expensive; 
  default value is FALSE

features:
- flatzinc reader is now capable to read cumulative constraints
- new heuristic vbounds which use the variables lower and upper bounds to fix variable and performs a neighborhood search
- new method SCIPwriteVarsVboundGraph() (scip.c) which writes the variable lower or upper bounds graph to a file in GML format
- new method SCIPvarGetHashkey(), SCIPvarIsHashkeyEq(), SCIPvarGetHashkeyVal() in pub_var.h which can be used for SCIP_HASHTABLE of variables